added: operandInsWrong, operandDirWrong, operandInsNeedAdd, MEMoutRange, INDEXoutRange, and FLoutRange to errors.properties.
modified UIG_IO to make use of makeError

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -14,8 +14,15 @@ instrInvalid = `%0' is not a valid instruction
 directiveMissingOp = Missing `%1' operand to `%0' directive
 instructionMissingOp = Missing `%1' operand to `%0' instruction
 extraOperandsDir = Too many operands to `%0' directive
+operandInsWrong = `%0' instruction cannot use `%1' operand.
+operandDirWrong = `%0' directive cannot use `%1' operand.
+operandInsNeedAdd = `%0' instruction requires `%1' operand in addition to `%2'.
 extraOperandsIns = Too many operands to `%0' directive
 extraOperands = Too many operands provided
 
+
 # Operand-specific errors
 STstringCount = Operand `ST' must contain precisely one string in this context
+MEMoutRange = Operand `%0' must be within range: [0, 4095].
+INDEXoutRange = Operand `%0' must be within range: [1, 7].
+FLoutRange = Operand `FL' must be within range: [-2^12, (2^12) - 1].
