Adds more checking to Instruction.parse(), gives the UI a caption.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -9,6 +9,7 @@ expectOpColon = Expected colon following `%0' keyword
 Unexpected symbol `%0' following %1
 instrUnknown = `%0' is not a known instruction
 instrInvalid = `%0' is not a valid instruction
+unexpSymOp = Unexpected symbol '%0' in `%1' operand
 
 # General purpose operand errors
 directiveMissingOp = Missing `%1' operand to `%0' directive
