added an extra error to handle KICKO's unique error. added implementation for USI_KICKO's check().

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -29,4 +29,7 @@ OORidxReg = Operand `%0' for `%1' instruction must be within range: [1,7].
 # Operand-specific errors
 STstringCount = Operand `ST' must contain precisely one string in this context
 
+#Directive-specific errors
+KICKOlineNum = Directive `KICKO' cannot be placed anywhere but at the first line of the source file."
+
 
