added OORarithReg to errors.properties and fixed my code to give correct errors

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -26,6 +26,7 @@ OOR13tc = Operand `%0' for `%1' instruction/directive must be within range: [-2^
 OORmemAddr = Operand `%0' for `%1' instruction/directive must be within range: [0, 4095].
 OORidxReg = Operand `%0' for `%1' instruction must be within range: [1,7].
 OORlabel = Operand `%0' for `%1' instruction/directive must contain a valid label.
+OORarithReg = Operand `%0' for `%1' instruction must be within range: [0,7].
 
 # Operand-specific errors
 STstringCount = Operand `ST' must contain precisely one string in this context
