fixed error checking in end and added more errors to errors.properties

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -34,4 +34,6 @@ STstringCount = Operand `ST' must contain precisely one string in this context
 #Directive-specific errors
 KICKOlineNum = Directive `KICKO' cannot be placed anywhere but at the first line of the source file."
 
-
+#label errors
+noLabel = "Remove label from `%0' directive."
+matchLabel = "LR:label must match KICKO label."
