--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -11,9 +11,17 @@ instrUnknown = `%0' is not a known instruction
 instrInvalid = `%0' is not a valid instruction
 unexpSymOp = Unexpected symbol '%0' in `%1' operand
 
+#Expression evaluation errors
+undefEqLabel = Could not find label `%0': Must be a previously defined EQU or EQUe label
+illegalRefAmp = Cannot take reference of non-EQU label `%0' in this context
+
 # General purpose operand errors
 directiveMissingOp = Missing `%1' operand to `%0' directive
 instructionMissingOp = Missing `%1' operand to `%0' instruction
+directiveMissingOp3 = Missing `%1' or `%2' operand to `%0' directive
+instructionMissingOp3 = Missing `%1' or `%2' operand to `%0' instruction
+directiveMissingOp3 = Missing `%1', `%2', or `%3' operand to `%0' directive
+instructionMissingOp3 = Missing `%1', `%2', or `%3' operand to `%0' instruction
 operandInsWrong = `%0' instruction cannot use `%1' operand.
 operandDirWrong = `%0' directive cannot use `%1' operand.
 operandInsNeedAdd = `%0' instruction requires `%1' operand in addition to `%2'.
