Finishes up EQU and EQUe directives; adds support for spaces in expressions at arbitrary locations.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -24,8 +24,8 @@ directiveMissingOp2 = Missing `%1' or `%2' operand to `%0' directive
 instructionMissingOp2 = Missing `%1' or `%2' operand to `%0' instruction
 directiveMissingOp3 = Missing `%1', `%2', or `%3' operand to `%0' directive
 instructionMissingOp3 = Missing `%1', `%2', or `%3' operand to `%0' instruction
-operandInsWrong = `%0' instruction cannot use `%1' operand.
-operandDirWrong = `%0' directive cannot use `%1' operand.
+operandInsWrong = Operand `%1' is inapplicable for `%0' instruction
+operandDirWrong = Operand `%1' is inapplicable for `%0' directive
 operandInsNeedAdd = `%0' instruction requires `%1' operand in addition to `%2'.
 extraOperandsIns = Too many operands to `%0' instruction.
 extraOperandsDir = Too many operands to `%0' directive
