--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -32,12 +32,11 @@ extraOperandsDir = Too many operands to `%0' directive
 extraOperands = Too many operands provided
 
 # Operand Out of Range errors
-OOR13tc = Operand `%0' for `%1' instruction/directive must be within range: [-2^12, (2^12) - 1].
 OORmemAddr = Operand `%0' for `%1' instruction/directive must be within range: [0, 4095].
 OORidxReg = Operand `%0' for `%1' instruction must be within range: [1,7].
 OORlabel = Operand `%0' for `%1' instruction/directive must contain a valid label.
 OORarithReg = Operand `%0' for `%1' instruction must be within range: [0,7].
-
+OORconstant = Operand `%0' for `%1' instruction must be within range: [%2, %3].
 # Operand-specific errors
 STstringCount = Operand `ST' must contain precisely one string in this context
 lcBackward = Directive attempts to move LC backwards 
