Fixes the EXT directive. Adds appropriate error to errors.properties, and fixes some issues in that file. Removes warnings from GUIMain. Gives AbstractDirective an empty default assembly.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -40,11 +40,13 @@ OORarithReg = Operand `%0' for `%1' instruction must be within range: [0,7].
 
 # Operand-specific errors
 STstringCount = Operand `ST' must contain precisely one string in this context
-lcBackward = Directive attempts to move LC backwards 
+lcBackward = Directive attempts to move LC backwards
+invalidExt = Attempt to externalize %1 label %0
 
 #Directive-specific errors
 KICKOlineNum = Directive `KICKO' cannot be placed anywhere but at the first line of the source file."
 
 #label errors
-noLabel = "Remove label from `%0' directive."
-matchLabel = "LR:label must match KICKO label."
+noLabel = Remove label from `%0' directive
+singLabelExp = Expected single label for `%0' operand
+matchLabel = LR:label must match KICKO label
