Added error checking of addEntry so that it catches duplicate symbols added two errors: duplicateSymbol and shadowLabel

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -49,3 +49,7 @@ KICKOlineNum = Directive `KICKO' cannot be placed anywhere but at the first line
 noLabel = Remove label from `%0' directive
 singLabelExp = Expected single label for `%0' operand
 matchLabel = LR:label must match KICKO label
+
+#symbol table errors.
+duplicateSymbol = Duplicate symbol `%0' on line defined on line `%1'
+shadowLabel = Symbol `%0' shadows external symbol at line `%1'
