--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -42,9 +42,6 @@ STstringCount = Operand `ST' must contain precisely one string in this context
 lcBackward = Directive attempts to move LC backwards
 invalidExt = Attempt to externalize %1 label %0
 
-#Directive-specific errors
-KICKOlineNum = Directive `KICKO' cannot be placed anywhere but at the first line of the source file."
-
 #label errors
 noLabel = Remove label from `%0' directive
 singLabelExp = Expected single label for `%0' operand
@@ -53,3 +50,7 @@ matchLabel = LR:label must match KICKO label
 #symbol table errors.
 duplicateSymbol = Duplicate symbol `%0' on line defined on line `%1'
 shadowLabel = Symbol `%0' shadows external symbol at line `%1'
+
+#fatal errors
+KICKOlineNum = Directive `KICKO' must be placed at the first line of the source file."
+OOM = Out of Memory.
