fixed error message in UIG_IO for NW. added error message for OORnw fixed toString for Instruction.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -38,6 +38,7 @@ OORlabel = Operand `%0' for `%1' instruction/directive must contain a valid labe
 OORarithReg = Operand `%0' for `%1' instruction must be within range: [0,7].
 OORconstant = Operand `%0' for `%1' instruction must be within range: [%2, %3].
 OOR13tc = Operand `%0' for `%1' instruction must be within range: [2^15-1,-2^15].
+OORnw = Operand `NW' for `%0' instruction must be within range: [0, 15].
 # Operand-specific errors
 STstringCount = Operand `ST' must contain precisely one string in this context
 lcBackward = Directive attempts to move LC backwards
@@ -52,6 +53,6 @@ matchLabel = LR:label must match KICKO label
 duplicateSymbol = Duplicate symbol `%0' on line defined on line `%1'
 shadowLabel = Symbol `%0' shadows external symbol at line `%1'
 
-#fatal errors
+#Assembler errors
 KICKOlineNum = Directive `KICKO' must be placed at the first line of the source file."
 OOM = Out of Memory.
