Adds support for multiple-line instructions

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -59,3 +59,4 @@ shadowLabel     = 131: Symbol `%0' shadows external symbol at line `%1'
 #fatal errors
 KICKOlineNum = 151: Directive `KICKO' must be placed at the first line of the source file
 OOM          = 152: Out of Memory.
+expSemiEOF   = Expected semicolon before end of file
