--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -12,10 +12,11 @@ instrUnknown   = 006: `%0' is not a known instruction
 instrInvalid   = 007: `%0' is not a valid instruction
 unexpSymOp     = 008: Unexpected symbol '%0' in `%1' operand
 
-#Expression evaluation errors
+# Expression evaluation errors
 undefEqLabel  = 021: Could not find label `%0': Must be a previously defined EQU or EQUe label
 illegalRefAmp = 022: Cannot take reference of non-EQU label `%0' in this context
 unexpSymExp   = 023: Unexpected symbol '%0' in expression
+emptyExpr     = 024: Empty expression given
 
 # General purpose operand errors
 directiveMissingOp    = 040: Missing `%1' operand to `%0' directive
@@ -48,22 +49,17 @@ STstringCount = 091: Operand `ST' must contain precisely one string in this cont
 lcBackward    = 091: Directive attempts to move LC backwards
 invalidExt    = 091: Attempt to externalize %1 label %0
 
-#label errors
+# Label errors
 noLabel      = 111: Remove label from `%0' directive
 singLabelExp = 112: Expected single label for `%0' operand
 matchLabel   = 113: LR:label must match KICKO label
 
-#symbol table errors.
+# Symbol table errors.
 duplicateSymbol = 131: Duplicate symbol `%0' on line defined on line `%1'
 shadowLabel     = 131: Symbol `%0' shadows external symbol at line `%1'
 
-<<<<<<< HEAD
-#fatal errors
+# Assembler errors
 KICKOlineNum = 151: Directive `KICKO' must be placed at the first line of the source file
-OOM          = 152: Out of Memory.
-expSemiEOF   = Expected semicolon before end of file
-=======
-#Assembler errors
-KICKOlineNum = Directive `KICKO' must be placed at the first line of the source file."
-OOM = Out of Memory.
->>>>>>> a1cd50525435a65c19442ad4427318e67f88ba42
+OOM          = 152: Out of Memory
+expSemiEOF   = 153: Expected semicolon before end of file
+
