--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -34,7 +34,7 @@ extraOperands         = 051: Too many operands provided
 tooFewOperandsIns     = 052: Too few operands to `%0' instruction
 tooFewOperandsDir     = 053: Too few operands to `%0' directive
 tooFewOperands        = 054: Too few operands provided
-
+operandWrongWith	  = 055: Operand not valid with operand combination `%0' and `%1'.
 # Operand Out of Range errors
 OORmemAddr    = 071: Operand `%0' for `%1' instruction/directive must be within range: [0, 4095]
 OORidxReg     = 072: Operand `%0' for `%1' instruction must be within range: [1,7]
