--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -35,6 +35,7 @@ tooFewOperandsIns     = 052: Too few operands to `%0' instruction
 tooFewOperandsDir     = 053: Too few operands to `%0' directive
 tooFewOperands        = 054: Too few operands provided
 operandWrongWith	  = 055: Operand not valid with operand combination `%0' and `%1'.
+operandInsBeWith      = 056: Operand `%0' must be paired with operand `%1' for instruction '%2'.
 # Operand Out of Range errors
 OORmemAddr    = 071: Operand `%0' for `%1' instruction/directive must be within range: [0, 4095]
 OORidxReg     = 072: Operand `%0' for `%1' instruction must be within range: [1,7]
