--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -14,9 +14,10 @@ unexpSymOp     = 008: Unexpected symbol '%0' in `%1' operand
 
 # Expression evaluation errors
 undefEqLabel  = 021: Could not find label `%0': Must be a previously defined EQU or EQUe label
-illegalRefAmp = 022: Cannot take reference of non-EQU label `%0' in this context
-unexpSymExp   = 023: Unexpected symbol '%0' in expression
-emptyExpr     = 024: Empty expression given
+undefLabel    = 022: Could not find label `%0': Label not in symbol table
+illegalRefAmp = 023: Cannot take reference of non-EQU label `%0' in this context
+unexpSymExp   = 024: Unexpected symbol '%0' in expression
+emptyExpr     = 025: Empty expression given
 
 # General purpose operand errors
 directiveMissingOp    = 040: Missing `%1' operand to `%0' directive
