Attempt at error fix

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -55,6 +55,7 @@ invalidExt    = 091: Attempt to externalize %1 label %0
 noLabel      = 111: Remove label from `%0' directive
 singLabelExp = 112: Expected single label for `%0' operand
 matchLabel   = 113: LR:label must match KICKO label
+noRQlabel    = 114: Missing label to `%0' directive: Label is required
 
 # Symbol table errors.
 duplicateSymbol = 131: Duplicate symbol `%0' on line defined on line `%1'
