Mary had a little lamb.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -23,6 +23,7 @@ nonConstExpr  = 029: Constant expression expected; `%0` cannot be properly evalu
 # General purpose operand errors
 directiveMissingOp    = 040: Missing `%1' operand to `%0' directive
 instructionMissingOp  = 041: Missing `%1' operand to `%0' instruction
+instructionMissingOpS = 041: Missing `%1' (%2) operand to `%0' instruction
 directiveMissingOp2   = 042: Missing `%1' or `%2' operand to `%0' directive
 instructionMissingOp2 = 043: Missing `%1' or `%2' operand to `%0' instruction
 directiveMissingOp3   = 044: Missing `%1', `%2', or `%3' operand to `%0' directive
@@ -67,9 +68,10 @@ shadowLabel     = 132: Symbol `%0' shadows external symbol at line `%1'
 KICKOlineNum = 151: Directive `KICKO' must be placed at the first line of the source file
 OOM          = 152: Out of Memory.
 expSemiEOF   = 153: Expected semicolon before end of file
-NoEnd		 = 154: No `End' Directive before end of file.
+NoEnd        = 154: No `End' Directive before end of file.
 
-#warnings
-LinePastEnd  = 171: Lines past `END' directive.
+# Extra errors
+unmatchedStr = 171: String "%0" does not match %1
 
-
+# Warnings
+LinePastEnd  = 301: Lines past `END' directive.
