--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -18,6 +18,7 @@ undefLabel    = 022: Could not find label `%0': Label not in symbol table
 illegalRefAmp = 023: Cannot take reference of non-EQU label `%0' in this context
 unexpSymExp   = 024: Unexpected symbol '%0' in expression
 emptyExpr     = 025: Empty expression given
+opratorExp    = 026: Operator '+' or '-' expected here
 nonConstExpr  = 029: Constant expression expected; `%0` cannot be properly evaluated here
 
 # General purpose operand errors
