added new error. Added addInstruction to Module.changed calls in Assembler to reflect Module changes.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -12,6 +12,9 @@ instrUnknown   = 006: `%0' is not a known instruction
 instrInvalid   = 007: `%0' is not a valid instruction
 unexpSymOp     = 008: Unexpected symbol '%0' in `%1' operand
 
+# Module Error
+ORmoduleLength = 014: Module, '%0', is too long.
+
 # Expression evaluation errors
 undefEqLabel  = 021: Could not find label `%0': Must be a previously defined EQU or EQUe label
 undefLabel    = 022: Could not find label `%0': Label not in symbol table
