Unleashes hell of errors caused by adding a parameter to evaluate(). Also, fixes Eric's changes to user guide.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -13,7 +13,7 @@ instrInvalid   = 007: `%0' is not a valid instruction
 unexpSymOp     = 008: Unexpected symbol '%0' in `%1' operand
 
 # Module Error
-ORmoduleLength = 014: Module, '%0', is too long.
+ORmoduleLength = 014: Module `%0' is too long
 
 # Expression evaluation errors
 undefEqLabel  = 021: Could not find label `%0': Must be a previously defined EQU or EQUe label
@@ -72,7 +72,7 @@ shadowLabel     = 132: Symbol `%0' shadows external symbol at line `%1'
 KICKOlineNum = 151: Directive `KICKO' must be placed at the first line of the source file
 OOM          = 152: Out of Memory.
 expSemiEOF   = 153: Expected semicolon before end of file
-NoEnd        = 154: No `End' Directive before end of file.
+NoEnd        = 154: No `End' Directive before end of file
 
 # Extra errors
 unmatchedStr = 171: String "%0" does not match %1
