Adds error reporting to evaluate() for invalid AREC flags based on passed bitLocation data. Adds more error reporting to InstructionFormatter.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -16,13 +16,14 @@ unexpSymOp     = 008: Unexpected symbol '%0' in `%1' operand
 ORmoduleLength = 014: Module `%0' is too long
 
 # Expression evaluation errors
-undefEqLabel  = 021: Could not find label `%0': Must be a previously defined EQU or EQUe label
-undefLabel    = 022: Could not find label `%0': Label not in symbol table
-illegalRefAmp = 023: Cannot take reference of non-EQU label `%0' in this context
-unexpSymExp   = 024: Unexpected symbol '%0' in expression
-emptyExpr     = 025: Empty expression given
-opratorExp    = 026: Operator '+' or '-' expected here
-nonConstExpr  = 029: Constant expression expected; `%0` cannot be properly evaluated here
+undefEqLabel   = 021: Could not find label `%0': Must be a previously defined EQU or EQUe label
+undefLabel     = 022: Could not find label `%0': Label not in symbol table
+illegalRefAmp  = 023: Cannot take reference of non-EQU label `%0' in this context
+unexpSymExp    = 024: Unexpected symbol '%0' in expression
+emptyExpr      = 025: Empty expression given
+opratorExp     = 026: Operator '+' or '-' expected here
+nonConstExpr   = 028: Constant expression expected; `%0` cannot be properly evaluated here
+arecNotAllowed = 029: Expression with address type '%0' not allowed in this context
 
 # General purpose operand errors
 directiveMissingOp    = 040: Missing `%1' operand to `%0' directive
