Fixes a bunch of crap Chau found.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -51,7 +51,8 @@ OORlabel      = 073: Operand `%0' for `%1' instruction/directive must contain a 
 OORarithReg   = 074: Operand `%0' for `%1' instruction must be within range: [0,7]
 OORconstant   = 075: Operand `%0' for `%1' instruction must be within range: [%2, %3]
 OOR13tc       = 076: Operand `%0' for `%1' instruction must be within range: [2^15-1,-2^15]
-OORnw         = 077: Operand `NW' for `%0' instruction must be within range: [0, 15].
+OORnw         = 077: Operand `NW' for `%0' instruction must be within range: [0, 15]
+OORurbanWord  = 078: Value of expression `%0` does not fit in URBAN word
 
 # Operand-specific errors
 STstringCount = 091: Operand `ST' must contain precisely one string in this context
