Fixes error line sorting in GUI, adds warnings to CHAR on extra operands, adds N records to evaluate().

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -80,4 +80,5 @@ NoEnd        = 154: No `End' Directive before end of file
 unmatchedStr = 171: String "%0" does not match %1
 
 # Warnings
-LinePastEnd  = 301: Lines past `END' directive.
+LinePastEnd = 301: Lines past `END' directive.
+extraParamsIgF = 302: Extra parameters to `%0' ignored; only first `%1' considered
