Fixed Ratul's code, finished Deformatter, started load() method in Simulator.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -83,3 +83,14 @@ unmatchedStr = 171: String "%0" does not match %1
 # Warnings
 LinePastEnd = 301: Lines past `END' directive.
 extraParamsIgF = 302: Extra parameters to `%0' ignored; only first `%1' considered
+
+# Load-time Errors
+loaderReadFail = 900: Failed to load loader file
+loadNoHeader   = 901: Header record missing from loader file: file invalid
+
+
+# Runtime Errors
+runIRegOOR = 1000: Segmentation fault: Attempt to access index register %0.
+runRegOOR = 1001: Segmentation fault: Attempt to access register %0.
+runMemOOR = 1002: Segmentation fault: Attempt to access memory at address 0x%0.
+runMemOOR = 1003: Arithmetic overflow: Division by zero.
