Commits Scanner adapter class called ScanWrap; needs moved somewhere more central. Commits start of LinkerTab, which may be completely broken. I can't test due to half of my OS currently differing in version from the other half.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -84,10 +84,22 @@ unmatchedStr = 171: String "%0" does not match %1
 LinePastEnd = 301: Lines past `END' directive.
 extraParamsIgF = 302: Extra parameters to `%0' ignored; only first `%1' considered
 
+# Format reading errors
+missingSeparator = 500: Missing separator
+datafileCRCFail  = 501: Program name does not match previously specified label 
+
 # Load-time Errors
 loaderReadFail = 900: Failed to load loader file
-loadNoHeader   = 901: Header record missing from loader file: file invalid
-
+loaderNoHeader = 901: Header record missing from loader file: file invalid
+loaderNoName   = 902: Header record missing program name
+loaderInvName  = 903: Header record contains invalid program name
+loaderHNoAddr  = 904: Header record missing program load address
+loaderNoEXS    = 905: Header record missing execution start address
+loaderHNoPrL   = 906: Header record missing program length
+loaderHNoDate  = 907: Header record missing assembly date: file invalid
+loaderHNoLLMM  = 908: Header record missing URBAN-LLM marker: file invalid
+loaderHNoVer   = 909: Header record missing assembler version number: file invalid
+loaderNoEnd    = 910: End record missing from loader file: file invalid
 
 # Runtime Errors
 runIRegOOR = 1000: Segmentation fault: Attempt to access index register %0.
