Updates text editor; finishes reading loader module.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -96,10 +96,11 @@ loaderInvName  = 903: Header record contains invalid program name
 loaderHNoAddr  = 904: Header record missing program load address
 loaderNoEXS    = 905: Header record missing execution start address
 loaderHNoPrL   = 906: Header record missing program length
-loaderHNoDate  = 907: Header record missing assembly date: file invalid
-loaderHNoLLMM  = 908: Header record missing URBAN-LLM marker: file invalid
-loaderHNoVer   = 909: Header record missing assembler version number: file invalid
-loaderNoEnd    = 910: End record missing from loader file: file invalid
+loaderPrLnOOR  = 907: Header record gives invalid program length
+loaderHNoDate  = 908: Header record missing assembly date: file invalid
+loaderHNoLLMM  = 909: Header record missing URBAN-LLM marker: file invalid
+loaderHNoVer   = 910: Header record missing assembler version number: file invalid
+loaderNoEnd    = 911: End record missing from loader file: file invalid
 
 # Runtime Errors
 runIRegOOR = 1000: Segmentation fault: Attempt to access index register %0.
