Mostly done linkermodule

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -107,3 +107,18 @@ runIRegOOR = 1000: Segmentation fault: Attempt to access index register %0.
 runRegOOR = 1001: Segmentation fault: Attempt to access register %0.
 runMemOOR = 1002: Segmentation fault: Attempt to access memory at address 0x%0.
 runMemOOR = 1003: Arithmetic overflow: Division by zero.
+
+# Record Errors
+textLC = 800: Text record missing valid program assigned location.
+textData = 801: Text record missing valid assembled instruction/data.
+textStatus = 802: Text record missing valid status flag.
+textMod = 803: Text record missing valid number of modifications.
+modHex = 804: Modification record missing 4 hex nybbles.
+modPm = 805: Modification record missing plus or minus sign.
+modFlag = 806: Modification record missing correct flag R or E.
+modLink = 807: Modification record missing valid label for address.
+modHLS = 808: Modification record missing correct char H, L, or S.
+invalidRecord = 809: Invalid Record. Records must start with valid record character.
+endRecords = 810: Invalid number of records in end record.
+
+
