added check for +,- sign and added more errors to error.properties and fixed linker module

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -83,6 +83,11 @@ unmatchedStr = 171: String "%0" does not match %1
 # Warnings
 LinePastEnd = 301: Lines past `END' directive.
 extraParamsIgF = 302: Extra parameters to `%0' ignored; only first `%1' considered
+noMatch = 303: Program Name does not match end of record name.
+linkMatch = 304: Number of link records does not match end record amount.
+modMatch = 305: Number of modification records does not match end record amount.
+textMatch = 306: Number of text records does not match end record amount.
+totalMatch = 307: Number of  total records does not match end record amount.
 
 # Format reading errors
 missingSeparator = 500: Missing separator
@@ -120,5 +125,7 @@ modLink = 807: Modification record missing valid label for address.
 modHLS = 808: Modification record missing correct char H, L, or S.
 invalidRecord = 809: Invalid Record. Records must start with valid record character.
 endRecords = 810: Invalid number of records in end record.
+invalidValue = 811: Invalid value. Records values must be from 0 - 4095.
+invalidPlus = 812: Modification records must contain plus or minus sign.
 
 
