checks for 13 bit literal when literal+mem format. added errors.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -46,7 +46,7 @@ operandWrongWith	  = 055: Operand not valid with operand combination `%0' and `%
 operandInsBeWith      = 056: Operand `%0' must be paired with operand `%1' for instruction `%2'.
 operandInsMayWith     = 057: Operand `%0' may only be paired with operand `%1' for instruction `%2'.
 # Operand Out of Range errors
-OORmemAddr    = 071: Operand `%0' for `%1' instruction/directive must be within range: [-4096, 4095]
+OORmemAddr    = 071: Operand `%0' for `%1' instruction/directive must be within range: [0, 4095]
 OORidxReg     = 072: Operand `%0' for `%1' instruction must be within range: [1,7]
 OORlabel      = 073: Operand `%0' for `%1' instruction/directive must contain a valid label
 OORarithReg   = 074: Operand `%0' for `%1' instruction must be within range: [0,7]
@@ -128,4 +128,10 @@ endRecords = 810: Invalid number of records in end record.
 invalidValue = 811: Invalid value. Records values must be from 0 - 4095.
 invalidPlus = 812: Modification records must contain plus or minus sign.
 
+# Linker Errors
+noLbl = 700: No corresponding linker record for label.
+dupLbl = 701: More than one linker records with the same label.
+lnkOORAddr = 702: Non-literal value must be within range: [0, 4095].
+lnkOORLit16 = 703: Literal value must be within range: [-32768, 32767].
+lnkOORLit13 = 704: Literal value must be within range: [-4096, 4095].
 
