added more error checking to linkerModule

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -120,7 +120,7 @@ textStatus = 802: Text record missing valid status flag.
 textMod = 803: Text record missing valid number of modifications.
 modHex = 804: Modification record missing 4 hex nybbles.
 modPm = 805: Modification record missing plus or minus sign.
-modFlag = 806: Modification record missing correct flag R or E.
+modFlag = 806: Modification record missing correct flag R, E, or N.
 modLink = 807: Modification record missing valid label for address.
 modHLS = 808: Modification record missing correct char H, L, or S.
 invalidRecord = 809: Invalid Record. Records must start with valid record character.
