--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -105,6 +105,7 @@ loaderPrLnOOR  = 907: Header record gives invalid program length
 loaderHNoDate  = 908: Header record missing assembly date: file invalid
 loaderHNoLLMM  = 909: Header record missing URBAN-LLM marker: file invalid
 loaderHNoVer   = 910: Header record missing assembler version number: file invalid
+loaderTNoWord  = 911: Text record contains no memory word: file invalid
 loaderNoEnd    = 911: End record missing from loader file: file invalid
 
 # Runtime Errors
