Implements the Run button, I think.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -109,10 +109,12 @@ loaderTNoWord  = 911: Text record contains no memory word: file invalid
 loaderNoEnd    = 911: End record missing from loader file: file invalid
 
 # Runtime Errors
-runIRegOOR = 1000: Segmentation fault: Attempt to access index register %0.
-runRegOOR = 1001: Segmentation fault: Attempt to access register %0.
-runMemOOR = 1002: Segmentation fault: Attempt to access memory at address 0x%0.
-runMemOOR = 1003: Arithmetic overflow: Division by zero.
+runIRegOOR   = 1000: Segmentation fault: Attempt to access index register %0.
+runRegOOR    = 1001: Segmentation fault: Attempt to access register %0.
+runMemOOR    = 1002: Segmentation fault: Attempt to access memory at address 0x%0.
+runMemOOR    = 1003: Arithmetic overflow: Division by zero.
+runInvOPCode = 1004: Invalid operation code %0 encountered.
+runLCwentOOR = 1005: Program Location Counter left range of memory; now at 0x%0.
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
