ISRG now uses formatDest added errors for NW. Instruction formatter now has formatDest that works with isrg. deformatter has other breakdown functions though it is incomplete.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -115,6 +115,7 @@ runMemOOR    = 1002: Segmentation fault: Attempt to access memory at address 0x%
 runMemOOR    = 1003: Arithmetic overflow: Division by zero.
 runInvOPCode = 1004: Invalid operation code %0 encountered.
 runLCwentOOR = 1005: Program Location Counter left range of memory; now at 0x%0.
+runNWOOR  	 = 1007: Segmentation fault: Attempt to access %0 number of words in memory.
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
