--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -132,6 +132,8 @@ endRecords = 810: Invalid number of records in end record.
 invalidValue = 811: Invalid value. Records values must be from 0 - 4095.
 invalidPlus = 812: Modification records must contain plus or minus sign.
 invalidMods = 813: Number of modifications in text record is out of range of 0-16.
+invalidLabel = 814: Invalid label in linker record.
+
 
 # Linker Errors
 noLbl = 700: No corresponding linker record for label.
