--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -141,4 +141,5 @@ dupLbl = 701: More than one linker records with the same label.
 lnkOORAddr = 702: Non-literal value must be within range: [0, 4095].
 lnkOORLit16 = 703: Literal value must be within range: [-32768, 32767].
 lnkOORLit12 = 704: Literal value must be within range: [-2048, 2047].
+execStart = 705: invalid execution start address.
 
