--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -136,7 +136,7 @@ invalidLabel = 814: Invalid label in linker record.
 
 
 # Linker Errors
-noLbl = 700: No corresponding linker record for label.
+noLbl = 700: No corresponding linker record for label, %0.
 dupLbl = 701: More than one linker records with the same label.
 lnkOORAddr = 702: Non-literal value must be within range: [0, 4095].
 lnkOORLit16 = 703: Literal value must be within range: [-32768, 32767].
