added better herr messages to linker

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -140,9 +140,9 @@ invalidLabel = 814: Invalid label in linker record.
 
 # Linker Errors
 noLbl = 700: No corresponding linker record for label, %0.
-dupLbl = 701: More than one linker records with the same label.
+dupLbl = 701: More than one linker records with the same label, %0.
 lnkOORAddr = 702: Non-literal value must be within range: [0, 4095].
 lnkOORLit16 = 703: Literal value must be within range: [-32768, 32767].
 lnkOORLit12 = 704: Literal value must be within range: [-2048, 2047].
-execStart = 705: invalid execution start address.
+execStart = 705: %0 is an invalid execution start address.
 
