checks for if read address + nw > 4095. changed duplicate error name to something else.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -112,7 +112,7 @@ loaderNoEnd    = 911: End record missing from loader file: file invalid
 runIRegOOR   = 1000: Segmentation fault: Attempt to access index register %0.
 runRegOOR    = 1001: Segmentation fault: Attempt to access register %0.
 runMemOOR    = 1002: Segmentation fault: Attempt to access memory at address 0x%0.
-runMemOOR    = 1003: Arithmetic overflow: Division by zero.
+runDivZero    = 1003: Arithmetic overflow: Division by zero.
 runInvOPCode = 1004: Invalid operation code %0 encountered.
 runLCwentOOR = 1005: Program Location Counter left range of memory; now at 0x%0.
 runInputInt  = 1006: Input is not an integer.
