--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -119,6 +119,7 @@ runInputInt  = 1006: Input is not an integer.
 runInputChar = 1007: Input is greater than a single character; first character in input has been taken.
 runNWOOR  	 = 1008: Segmentation fault: Attempt to access %0 number of words in memory.
 runOverflow  = 1009: Arithmetic overflow.
+runOverShift = 1010: Shift Overflow
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
