added runOverRotate to errors list and did range check for ISRA, ISLA, ISHR, ISHL, ROL ....

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -120,6 +120,7 @@ runInputChar = 1007: Input is greater than a single character; first character i
 runNWOOR  	 = 1008: Segmentation fault: Attempt to access %0 number of words in memory.
 runOverflow  = 1009: Arithmetic overflow.
 runOverShift = 1010: Shift Overflow
+runOverRotate = 1011: Rotate Overflow
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
