added runEmptyStack to error list... also added range checking for POP..

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -121,6 +121,7 @@ runNWOOR  	 = 1008: Segmentation fault: Attempt to access %0 number of words in 
 runOverflow  = 1009: Arithmetic overflow.
 runOverShift = 1010: Shift Overflow
 runOverRotate = 1011: Rotate Overflow
+runEmptyStack = 1012: Empty Stack
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
