Moves IOFormat. Refactors accordingly. Refactors IOPane to use a new HTMLStream class.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -118,7 +118,6 @@ runLCwentOOR = 1005: Program Location Counter left range of memory; now at 0x%0.
 runInputInt  = 1006: Input is not an integer.
 runInputChar = 1007: Input is greater than a single character; first character in input has been taken.
 runNWOOR  	 = 1008: Segmentation fault: Attempt to access %0 number of words in memory.
-runOverflow  = 1009: Arithmetic overflow.
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
@@ -140,9 +139,9 @@ invalidLabel = 814: Invalid label in linker record.
 
 # Linker Errors
 noLbl = 700: No corresponding linker record for label, %0.
-dupLbl = 701: More than one linker records with the same label, %0.
+dupLbl = 701: More than one linker records with the same label.
 lnkOORAddr = 702: Non-literal value must be within range: [0, 4095].
 lnkOORLit16 = 703: Literal value must be within range: [-32768, 32767].
 lnkOORLit12 = 704: Literal value must be within range: [-2048, 2047].
-execStart = 705: %0 is an invalid execution start address.
+execStart = 705: invalid execution start address.
 
