--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -106,7 +106,9 @@ loaderHNoDate  = 908: Header record missing assembly date: file invalid
 loaderHNoLLMM  = 909: Header record missing URBAN-LLM marker: file invalid
 loaderHNoVer   = 910: Header record missing assembler version number: file invalid
 loaderTNoWord  = 911: Text record contains no memory word: file invalid
-loaderNoEnd    = 911: End record missing from loader file: file invalid
+loaderNoEnd    = 912: End record missing from loader file: file invalid
+loaderTAddOOR  = 913: Text record contains invalid address
+loaderInvRecC  = 914: Record count is wrong: file invalid 
 
 # Runtime Errors
 runIRegOOR   = 1000: Segmentation fault: Attempt to access index register %0.
