implemented dmp execute. added out of range error for dmp level.

--- a/src/assemblernator/errors.properties
+++ b/src/assemblernator/errors.properties
@@ -124,6 +124,7 @@ runOverflow  = 1009: Arithmetic overflow.
 runOverShift = 1010: Shift Overflow
 runOverRotate = 1011: Rotate Overflow
 runEmptyStack = 1012: Empty Stack
+runDmpOOR     = 1013: Dump level must be within range: [1, 3].
 
 # Record Errors
 textLC = 800: Text record missing valid program assigned location.
